[package]
name = "oci-test"
version = "0.0.1"
edition = "2021"

[dependencies]
oci-distribution = "0.10.0"
async-std = "1.10.0"
tokio = { version = "1.36.0", features = ["full"] }
tar = "0.4.38"
flate2 = "1.0.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
