[package]
name = "oci-test"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-std = "1.10.0"
flate2 = "1.0.22"
libcontainer = "0.3.2"
nix = "0.27.1"
oci-distribution = "0.10.0"
serde_json = "1.0.114"
tar = "0.4.38"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }

[build-dependencies]
anyhow = "1.0.81"
